Started using Result and fixed errors.

--- a/Edge.xcodeproj/xcshareddata/xcschemes/Edge.xcscheme
+++ b/Edge.xcodeproj/xcshareddata/xcschemes/Edge.xcscheme
@@ -5,6 +5,15 @@
       <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
         <BuildableReference
           BuildableIdentifier = "primary"
+          BlueprintIdentifier = "______Target_Result"
+          BuildableName = "libResult.dylib"
+          BlueprintName = "Result"
+          ReferencedContainer = "container:Edge.xcodeproj">
+        </BuildableReference>
+      </BuildActionEntry>
+      <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
+        <BuildableReference
+          BuildableIdentifier = "primary"
           BlueprintIdentifier = "______Target_Edge"
           BuildableName = "libEdge.dylib"
           BlueprintName = "Edge"
