--- a/Edge.xcodeproj/xcshareddata/xcschemes/Edge.xcscheme
+++ b/Edge.xcodeproj/xcshareddata/xcschemes/Edge.xcscheme
@@ -14,6 +14,24 @@
       <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
         <BuildableReference
           BuildableIdentifier = "primary"
+          BlueprintIdentifier = "______Target_RxBlocking"
+          BuildableName = "libRxBlocking.dylib"
+          BlueprintName = "RxBlocking"
+          ReferencedContainer = "container:Edge.xcodeproj">
+        </BuildableReference>
+      </BuildActionEntry>
+      <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
+        <BuildableReference
+          BuildableIdentifier = "primary"
+          BlueprintIdentifier = "______Target_RxSwift"
+          BuildableName = "libRxSwift.dylib"
+          BlueprintName = "RxSwift"
+          ReferencedContainer = "container:Edge.xcodeproj">
+        </BuildableReference>
+      </BuildActionEntry>
+      <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
+        <BuildableReference
+          BuildableIdentifier = "primary"
           BlueprintIdentifier = "______Target_Edge"
           BuildableName = "libEdge.dylib"
           BlueprintName = "Edge"
