--- a/Edge.xcodeproj/xcshareddata/xcschemes/Edge.xcscheme
+++ b/Edge.xcodeproj/xcshareddata/xcschemes/Edge.xcscheme
@@ -5,9 +5,72 @@
       <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
         <BuildableReference
           BuildableIdentifier = "primary"
-          BlueprintIdentifier = "______Target_SwiftyBeaver"
-          BuildableName = "libSwiftyBeaver.dylib"
-          BlueprintName = "SwiftyBeaver"
+          BlueprintIdentifier = "______Target_C7"
+          BuildableName = "libC7.dylib"
+          BlueprintName = "C7"
+          ReferencedContainer = "container:Edge.xcodeproj">
+        </BuildableReference>
+      </BuildActionEntry>
+      <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
+        <BuildableReference
+          BuildableIdentifier = "primary"
+          BlueprintIdentifier = "______Target_Log"
+          BuildableName = "libLog.dylib"
+          BlueprintName = "Log"
+          ReferencedContainer = "container:Edge.xcodeproj">
+        </BuildableReference>
+      </BuildActionEntry>
+      <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
+        <BuildableReference
+          BuildableIdentifier = "primary"
+          BlueprintIdentifier = "______Target_Reactive"
+          BuildableName = "libReactive.dylib"
+          BlueprintName = "Reactive"
+          ReferencedContainer = "container:Edge.xcodeproj">
+        </BuildableReference>
+      </BuildActionEntry>
+      <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
+        <BuildableReference
+          BuildableIdentifier = "primary"
+          BlueprintIdentifier = "______Target_POSIX"
+          BuildableName = "libPOSIX.dylib"
+          BlueprintName = "POSIX"
+          ReferencedContainer = "container:Edge.xcodeproj">
+        </BuildableReference>
+      </BuildActionEntry>
+      <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
+        <BuildableReference
+          BuildableIdentifier = "primary"
+          BlueprintIdentifier = "______Target_StandardOutputAppender"
+          BuildableName = "libStandardOutputAppender.dylib"
+          BlueprintName = "StandardOutputAppender"
+          ReferencedContainer = "container:Edge.xcodeproj">
+        </BuildableReference>
+      </BuildActionEntry>
+      <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
+        <BuildableReference
+          BuildableIdentifier = "primary"
+          BlueprintIdentifier = "______Target_POSIXExtensions"
+          BuildableName = "libPOSIXExtensions.dylib"
+          BlueprintName = "POSIXExtensions"
+          ReferencedContainer = "container:Edge.xcodeproj">
+        </BuildableReference>
+      </BuildActionEntry>
+      <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
+        <BuildableReference
+          BuildableIdentifier = "primary"
+          BlueprintIdentifier = "______Target_IOStream"
+          BuildableName = "libIOStream.dylib"
+          BlueprintName = "IOStream"
+          ReferencedContainer = "container:Edge.xcodeproj">
+        </BuildableReference>
+      </BuildActionEntry>
+      <BuildActionEntry buildForTesting = "YES" buildForRunning = "YES" buildForProfiling = "YES" buildForArchiving = "YES" buildForAnalyzing = "YES">
+        <BuildableReference
+          BuildableIdentifier = "primary"
+          BlueprintIdentifier = "______Target_TCP"
+          BuildableName = "libTCP.dylib"
+          BlueprintName = "TCP"
           ReferencedContainer = "container:Edge.xcodeproj">
         </BuildableReference>
       </BuildActionEntry>
