--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,13 +1,15 @@
 codecov:
   branch: master
-  
+
 coverage:
   precision: 2
   round: down
   range: "70...100"
-  
+
 ignore:
   - "Tests"
 
 comment:
   layout: "header, diff, changes, sunburst, uncovered, tree"
+  behavior: default
+
