--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 # Where's mah Swift at Travis!?
 language: generic
 
-os:
-  - osx
-  - linux
-
-sudo: required
-
-dist: trusty
-
-osx_image: xcode9
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+    - os: osx
+      osx_image: xcode9.1
+      sudo: required
 
 script:
   - ./Scripts/TravisCI/test.sh
