--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ matrix:
       osx_image: xcode9.1
       sudo: required
 
+before_install:
+    - if [ $TRAVIS_OS_NAME == "linux" ]; then
+          ./Scripts/TravisCI/install-swift.sh
+      fi
+
 script:
     - swift build
     - swift build -c release
