--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,8 @@ matrix:
       osx_image: xcode9.1
       sudo: required
 
-before_install:
-    - >
-      if [ $TRAVIS_OS_NAME == "linux" ]; then
-          ./Scripts/TravisCI/install-swift.sh
-      fi
+install:
+    - ./Scripts/TravisCI/install-swift.sh
 
 script:
     - swift build
